feat: implement availability management for owner dashboard

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -194,6 +194,10 @@
     "selectDate": "Select Date",
     "startTime": "Start Time",
     "endTime": "End Time",
+    "selectEndTime": "Select an end time",
+    "selectStartTimePrompt": "Choose a start time to continue.",
+    "noAvailabilityForDay": "No hourly slots are available for this date.",
+    "loadingAvailability": "Loading availability…",
     "numberOfGuests": "Number of Guests",
     "serviceFee": "Service fee",
     "total": "Total",
@@ -205,6 +209,8 @@
     "pleaseSignIn": "Please sign in to make a booking",
     "signInFavorites": "Please sign in to save favorites",
     "failedBooking": "Failed to create booking",
+    "noTimeSelected": "Choose a start and end time before booking.",
+    "unavailableSelectedTime": "The selected time is no longer available. Please pick another slot.",
     "share": "Share",
     "save": "Save",
     "saved": "Saved",
@@ -678,6 +684,7 @@
     "earnings": "Earnings",
     "edit": "Edit",
     "view": "View",
+    "manageAvailability": "Manage availability",
     "addNewListingCard": "Add New Listing",
     "addNewListingDesc": "Create a new workspace listing and start earning",
     "getStarted": "Get Started",
@@ -690,6 +697,42 @@
     "bookingTrendsPlaceholder": "Booking trends chart will be displayed here",
     "availabilityCalendar": "Availability Calendar",
     "calendarPlaceholder": "Interactive calendar will be displayed here",
+    "availabilityManager": {
+      "title": "Availability manager",
+      "subtitle": "Choose a day to block or unblock hourly slots for your space.",
+      "spaceLabel": "Space",
+      "spacePlaceholder": "Select a space",
+      "timezoneLabel": "Time zone: {{timezone}}",
+      "noSpaces": "You need at least one published space to manage availability.",
+      "instructionsTitle": "Manage availability",
+      "instructionsSubtitle": "Stay in control of your calendar and prevent unwanted bookings.",
+      "instructions": {
+        "select": "Choose a date on the calendar to review availability.",
+        "toggle": "Use the selector to block an hour-long range instantly.",
+        "instant": "Manage blocked hours below to reopen slots whenever you need."
+      },
+      "prevMonth": "Previous month",
+      "nextMonth": "Next month",
+      "loading": "Updating availability…",
+      "slotsTitle": "Hourly availability",
+      "selectDatePrompt": "Select a day to manage hourly availability.",
+      "blockedTag": "Blocked",
+      "availableTag": "Available",
+      "toastBlockedTitle": "Hour blocked",
+      "toastBlockedDescription": "{{hour}} has been blocked for guests.",
+      "toastUnblockedTitle": "Hour unblocked",
+      "toastUnblockedDescription": "{{hour}} is available again for bookings.",
+      "toastError": "We couldn't update the availability. Please try again.",
+      "unavailableListTitle": "Unavailable hours",
+      "unavailableListEmpty": "No blocked hours for this day.",
+      "unavailableReasonBlocked": "Blocked",
+      "unavailableReasonBooked": "Booked",
+      "rangeSelectLabel": "Select an hour to block",
+      "rangeSelectPlaceholder": "Pick an available hour",
+      "unblockAction": "Unblock",
+      "manageAvailabilityDialogTitle": "Manage availability",
+      "manageAvailabilityDialogDescription": "Review and adjust blocked hours for {{space}}."
+    },
     "unknownGuest": "Unknown Guest",
     "confirmed": "confirmed",
     "pending": "pending",
