--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -195,6 +195,10 @@
     "selectDate": "Seleccionar fecha",
     "startTime": "Hora de inicio",
     "endTime": "Hora de fin",
+    "selectEndTime": "Selecciona una hora de fin",
+    "selectStartTimePrompt": "Elige una hora de inicio para continuar.",
+    "noAvailabilityForDay": "No hay horarios disponibles para esta fecha.",
+    "loadingAvailability": "Cargando disponibilidad…",
     "numberOfGuests": "Número de huéspedes",
     "serviceFee": "Tarifa de servicio",
     "total": "Total",
@@ -206,6 +210,8 @@
     "pleaseSignIn": "Por favor inicia sesión para hacer una reserva",
     "signInFavorites": "Por favor inicia sesión para guardar favoritos",
     "failedBooking": "Error al crear la reserva",
+    "noTimeSelected": "Elige una hora de inicio y fin antes de reservar.",
+    "unavailableSelectedTime": "El horario seleccionado ya no está disponible. Por favor elige otro.",
     "share": "Compartir",
     "save": "Guardar",
     "saved": "Guardado",
@@ -680,6 +686,7 @@
     "earnings": "Ganancias",
     "edit": "Editar",
     "view": "Ver",
+    "manageAvailability": "Gestionar horarios",
     "addNewListingCard": "Agregar Nuevo Listado",
     "addNewListingDesc": "Crea un nuevo listado de espacio de trabajo y comienza a ganar",
     "getStarted": "Comenzar",
@@ -692,6 +699,42 @@
     "bookingTrendsPlaceholder": "El gráfico de tendencias de reservas se mostrará aquí",
     "availabilityCalendar": "Calendario de Disponibilidad",
     "calendarPlaceholder": "El calendario interactivo se mostrará aquí",
+    "availabilityManager": {
+      "title": "Gestor de disponibilidad",
+      "subtitle": "Elige un día para bloquear o desbloquear bloques horarios de tu espacio.",
+      "spaceLabel": "Espacio",
+      "spacePlaceholder": "Selecciona un espacio",
+      "timezoneLabel": "Zona horaria: {{timezone}}",
+      "noSpaces": "Necesitas al menos un espacio publicado para gestionar la disponibilidad.",
+      "instructionsTitle": "Gestiona tu disponibilidad",
+      "instructionsSubtitle": "Mantén el control de tu calendario y evita reservas no deseadas.",
+      "instructions": {
+        "select": "Selecciona un día en el calendario para revisar la disponibilidad.",
+        "toggle": "Usa el selector para bloquear un rango de una hora al instante.",
+        "instant": "Gestiona los horarios bloqueados abajo para reabrirlos cuando lo necesites."
+      },
+      "prevMonth": "Mes anterior",
+      "nextMonth": "Mes siguiente",
+      "loading": "Actualizando disponibilidad…",
+      "slotsTitle": "Disponibilidad por hora",
+      "selectDatePrompt": "Selecciona un día para gestionar la disponibilidad por hora.",
+      "blockedTag": "Bloqueado",
+      "availableTag": "Disponible",
+      "toastBlockedTitle": "Hora bloqueada",
+      "toastBlockedDescription": "{{hour}} quedó bloqueada para los huéspedes.",
+      "toastUnblockedTitle": "Hora desbloqueada",
+      "toastUnblockedDescription": "{{hour}} vuelve a estar disponible para reservas.",
+      "toastError": "No pudimos actualizar la disponibilidad. Intenta nuevamente.",
+      "unavailableListTitle": "Horarios no disponibles",
+      "unavailableListEmpty": "No hay horas bloqueadas para este día.",
+      "unavailableReasonBlocked": "Bloqueado",
+      "unavailableReasonBooked": "Reservado",
+      "rangeSelectLabel": "Selecciona una hora para bloquear",
+      "rangeSelectPlaceholder": "Elige una hora disponible",
+      "unblockAction": "Desbloquear",
+      "manageAvailabilityDialogTitle": "Gestionar horarios",
+      "manageAvailabilityDialogDescription": "Revisa y ajusta las horas bloqueadas para {{space}}."
+    },
     "unknownGuest": "Huésped Desconocido",
     "confirmed": "confirmado",
     "pending": "pendiente",
