feat: add owner dashboard link and messaging functionality to host profile

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -791,9 +791,14 @@
       "showMore": "Show more reviews",
       "showLess": "Show less"
     },
+    "ownerProfile": {
+      "sendMessage": "Send message",
+      "goToOwnerDashboard": "Go to owner dashboard"
+    },
     "contact": {
       "contactHost": "Contact {{name}}",
-      "sendMessage": "Send message"
+      "sendMessage": "Send message",
+      "goToOwnerDashboard": "Go to owner dashboard"
     },
     "errors": {
       "notFound": "Host not found",
