--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -688,7 +688,9 @@
     "earnings": "Ganancias",
     "edit": "Editar",
     "view": "Ver",
-    "manageAvailability": "Gestionar horarios",
+    "manageAvailability": "Gestionar disponibilidad",
+    "activeStatus": "Activo",
+    "inactiveStatus": "Inactivo",
     "addNewListingCard": "Agregar Nuevo Listado",
     "addNewListingDesc": "Crea un nuevo listado de espacio de trabajo y comienza a ganar",
     "getStarted": "Comenzar",
