--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -123,7 +123,15 @@
       "noSpacesFound": "No se encontraron espacios",
       "adjustFilters": "Intenta ajustar tus filtros de búsqueda o explora diferentes criterios.",
       "clearFilters": "Limpiar filtros",
-      "removeFilter": "Remover filtro"
+      "removeFilter": "Remover filtro",
+      "categoryLabel": "Categoría",
+      "allCategories": "Todas las categorías",
+      "priceLabel": "Precio por hora",
+      "priceMin": "Precio mínimo",
+      "priceMax": "Precio máximo",
+      "selectedFilters": "Seleccionados",
+      "clearFiltersButton": "Quitar filtros",
+      "showResults": "Mostrar {{count}} alojamientos"
     },
     "features": {
       "wifi": "WiFi",
