feat: added new feature to show related spaces in space detail page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -228,6 +228,7 @@
     "whereYoullBe": "Where you'll be",
     "mapNotAvailable": "Map not available",
     "mapNotConfigured": "Mapbox is not configured",
+    "relatedSpacesTitle": "Popular spaces near {{city}}",
     "shareDialog": {
       "title": "Share this space",
       "copyLink": "Copy link",
