feat: search maponmove working as expected

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -775,7 +775,8 @@
     "viewDetails": "View details",
     "searchThisArea": "Search this area",
     "notAvailable": "Map not available",
-    "notConfigured": "Mapbox is not configured"
+    "notConfigured": "Mapbox is not configured",
+    "searchOnMove": "Search as I move"
   },
   "hostProfile": {
     "title": "Host Profile",
