--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -22,7 +22,7 @@
   "hero": {
     "title": "Encuentra el espacio de trabajo perfecto",
     "subtitle": "Descubre y reserva oficinas, salas de juntas y espacios de coworking en todo el mundo por hora, día o mes",
-    "searchPlaceholder": "Buscar por ubicación, tipo de espacio o características...",
+    "searchPlaceholder": "Buscar por tipo de espacio o características...",
     "searchButton": "Buscar",
     "search": "Buscar",
     "whatLabel": "¿Qué estás planeando?",
