--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -105,6 +105,10 @@
     "priceRange": "Rango de precio",
     "anyPrice": "Cualquier precio",
     "results": "{{count}} espacios encontrados",
+    "resultsCount": {
+      "singular": "espacio encontrado",
+      "plural": "espacios encontrados"
+    },
     "viewDetails": "Ver detalles",
     "bookNow": "Reservar ahora",
     "loadMore": "Cargar más espacios",
@@ -121,6 +125,7 @@
       "applyFilters": "Aplicar Filtros",
       "filters": "Filtros",
       "noSpacesFound": "No se encontraron espacios",
+      "noSpacesFoundDescription": "Intenta ajustar los filtros o buscar en una zona diferente del mapa.",
       "adjustFilters": "Intenta ajustar tus filtros de búsqueda o explora diferentes criterios.",
       "clearFilters": "Limpiar filtros",
       "removeFilter": "Remover filtro",
