--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -935,7 +935,13 @@
     "signInError": "Sign in error",
     "signUpError": "Sign up error",
     "passwordError": "Password error",
-    "passwordMinLength": "Password must be at least 6 characters"
+    "passwordMinLength": "Password must be at least 6 characters",
+    "emailSentDescription": "We've sent a magic link to your email address. Click the link to sign in.",
+    "enterCode": "Enter verification code",
+    "sentCodeTo": "We sent a code to",
+    "checkSpamFolder": "Can't find it? Check your spam folder.",
+    "tryDifferentEmail": "Try a different email",
+    "emailPlaceholder": "name@example.com"
   },
   "profile": {
     "member": "Member",
