feat: added more data to onboarding

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -880,6 +880,11 @@
       "label": "Full name",
       "placeholder": "Your full name"
     },
+    "personInfo": {
+      "title": "Personal Information",
+      "fullName": "Full Name",
+      "fullNamePlaceholder": "e.g. John Doe"
+    },
     "occupation": {
       "title": "What do you do?",
       "label": "Occupation",
